# vibe-plotter

./: .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  render.yaml
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: analytics.py  config.py  datasets.py  main.py  models.py  plot_agent.py  session_store.py  utils.py
apps/api/data/: auto_mpg.csv  iris.csv  wine.csv
apps/api/tests/: test_chat.py  test_datasets.py  test_validation.py
apps/web/: .env.example  next.config.js  package.json  playwright.config.ts  react-plotly.js.d.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/lib/: api.ts
apps/web/tests/: basic.spec.ts
